features: CP CRUD and Smart Charging